--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <!--Este es un elemento de navegación (nav) que debe ser único por página HTML. Tiene una clase "row"-->
     <nav class="row">
         <!--Este es un link (a) que lleva hacia otra página (href)-->
-        <a href="#">Carla</a>
+        <a href="#">CarlaLuciana</a>
         <a href="#">Carpintieri</a>
         <!--Esta es una división con id único "logo" que contiene la imagen del logo-->
         <div id="logo"><img src="media/logo_C.png" alt="Esta es la descripción del logo por si no carga correctamente">
